--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,10 +6,9 @@
     <!-- <link rel="shortcut icon" href="./favicon.png" type="image/png"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drive</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossOrigin='*' />
-      <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,600;1,100;1,400;1,500&display=swap" rel="stylesheet" />
-  </head>
+<link rel="preconnect" href="https://fonts.googleapis.com"/>
+<link rel="preconnect" href="https://fonts.gstatic.com" />
+<link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Poppins:ital,wght@0,300;0,500;0,600;1,100;1,400;1,500&display=swap" rel="stylesheet"/>   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
